# CMake modules
find_package(CUnit REQUIRED)

# Test executables
add_executable(test_pus_01 test_pus_01.c)
target_link_libraries(test_pus_01 esrocos_pus esrocos_pus_asn1 esrocos_pus_asn1common esrocos_pus_mission_test_01 ${CUNIT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(test_pus_01 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_pus_01)

add_executable(test_pus_02 test_pus_02.c)
target_link_libraries(test_pus_02 esrocos_pus_nothreads esrocos_pus_asn1 esrocos_pus_asn1common esrocos_pus_mission_test_01 ${CUNIT_LIBRARIES})
target_include_directories(test_pus_02 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_pus_02)

add_executable(test_st01 test_st01.c)
target_link_libraries(test_st01 esrocos_pus esrocos_pus_asn1 esrocos_pus_asn1common esrocos_pus_mission_test_01 ${CUNIT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(test_st01 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_st01)

add_executable(test_st03 test_st03.c)
target_link_libraries(test_st03 esrocos_pus esrocos_pus_asn1 esrocos_pus_asn1common esrocos_pus_mission_test_01 ${CUNIT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(test_st03 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_st03)

add_executable(test_st05 test_st05.c)
target_link_libraries(test_st05 esrocos_pus esrocos_pus_asn1 esrocos_pus_asn1common esrocos_pus_mission_test_01 ${CUNIT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(test_st05 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_st05)

# Add tests
enable_testing() # once
add_test(pus_01 test_pus_01)
add_test(pus_02 test_pus_02)
add_test(st01 test_st01)
add_test(st03 test_st03)
add_test(st05 test_st05)

# The ASN.1 autogenerated test is built in the asn folder
add_test(asn1 ${CMAKE_BINARY_DIR}/asn1/test_asn1)

