# CMake modules
find_package(CUnit REQUIRED)

# Test executables
add_executable(test_pus_01 test_pus_01.c)
target_link_libraries(test_pus_01 esrocos_pus esrocos_pus_asn1 esrocos_pus_asn1common esrocos_pus_mission_test_01 ${CUNIT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(test_pus_01 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_pus_01)

add_executable(test_pus_02 test_pus_02.c)
target_link_libraries(test_pus_02 esrocos_pus_nothreads esrocos_pus_asn1 esrocos_pus_asn1common esrocos_pus_mission_test_01 ${CUNIT_LIBRARIES})
target_include_directories(test_pus_02 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_pus_02)

add_executable(test_st01 test_st01.c)
target_link_libraries(test_st01 esrocos_pus esrocos_pus_asn1 esrocos_pus_asn1common esrocos_pus_mission_test_01 ${CUNIT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(test_st01 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_st01)

add_executable(test_st03 test_st03.c)
target_link_libraries(test_st03 esrocos_pus esrocos_pus_asn1 esrocos_pus_asn1common esrocos_pus_mission_test_01 ${CUNIT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(test_st03 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_st03)

add_executable(test_st05 test_st05.c)
target_link_libraries(test_st05 esrocos_pus_mission_test_01 esrocos_pus esrocos_pus_asn1 esrocos_pus_asn1common ${CUNIT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(test_st05 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_st05)

add_executable(test_st08 test_st08.c)
target_link_libraries(test_st08 esrocos_pus esrocos_pus_asn1 esrocos_pus_asn1common esrocos_pus_mission_test_01 ${CUNIT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(test_st08 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_st08)

add_executable(test_st09 test_st09.c)
target_link_libraries(test_st09 esrocos_pus esrocos_pus_asn1 esrocos_pus_asn1common esrocos_pus_mission_test_01 ${CUNIT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(test_st09 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_st09)

add_executable(test_st12 test_st12.c)
target_link_libraries(test_st12 esrocos_pus esrocos_pus_asn1 esrocos_pus_asn1common esrocos_pus_mission_test_01 ${CUNIT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(test_st12 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_st12)

add_executable(test_st17 test_st17.c)
target_link_libraries(test_st17 esrocos_pus esrocos_pus_asn1 esrocos_pus_asn1common esrocos_pus_mission_test_01 ${CUNIT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(test_st17 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_st17)

add_executable(test_st19 test_st19.c)
target_link_libraries(test_st19 esrocos_pus esrocos_pus_asn1 esrocos_pus_asn1common esrocos_pus_mission_test_01 ${CUNIT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(test_st19 PUBLIC ${CUNIT_INCLUDE_DIRS})
add_coverage(test_st19)

# Add tests
enable_testing() # once
add_test(pus_01 test_pus_01)
add_test(pus_02 test_pus_02)
add_test(st01 test_st01)
add_test(st03 test_st03)
add_test(st05 test_st05)
add_test(st08 test_st08)
add_test(st09 test_st09)
add_test(st12 test_st12)
add_test(st17 test_st17)
add_test(st19 test_st19)


# The ASN.1 autogenerated test is built in the asn folder
add_test(asn1 ${CMAKE_BINARY_DIR}/asn1/test_asn1)

